--- a/index.html
+++ b/index.html
@@ -281,16 +281,6 @@
                     <img src="src/img/sb.jpg" alt="">
                   </div>
                 </li>
-                <li>
-                  <div class="img_box">
-                    <img src="src/img/pb.jpg" alt="">
-                  </div>
-                </li>
-                <li>
-                  <div class="img_box">
-                    <img src="src/img/wb.jpg" alt="">
-                  </div>
-                </li>
               </ul>
               <div class="img_text size">
                 <p class="title1">봄 여행</p>
@@ -301,7 +291,107 @@
         </div>
       </div>
     </section>
-    <section id="about"></section>
+    <section id="about">
+      <div class="about_inner">
+        <h2 class="about_title">About Me <em>나의 도전</em></h2>
+        <div class="about_desc">
+          <div class="time_line">
+            <span>2024.05.21</span>
+            <h3>꿈을 실행시키다.</h3>
+            <p>처음엔 흥미를 느껴 시작하게 된 <b>웹퍼블리셔</b>,
+              6개월이 지난 지금 새로운 길을 가기위해 도전하다.</p>
+          </div>
+          <div class="time_line">
+            <span>2024.05.21</span>
+            <h3>꿈을 실행시키다.</h3>
+            <p>처음엔 흥미를 느껴 시작하게 된 웹퍼블리셔,
+              6개월이 지난 지금 새로운 길을 가기위해 도전하다.</p>
+          </div>
+          <div class="time_line">
+            <span>2024.05.21</span>
+            <h3>꿈을 실행시키다.</h3>
+            <p>처음엔 흥미를 느껴 시작하게 된 웹퍼블리셔,
+              6개월이 지난 지금 새로운 길을 가기위해 도전하다.</p>
+          </div>
+          <div class="time_line">
+            <span>2020.05-2022.04</span>
+            <h3>맛있는 빵을 굽다.</h3>
+            <p>처음엔 흥미를 느껴 시작하게 된 웹퍼블리셔,
+              6개월이 지난 지금 새로운 길을 가기위해 도전하다.</p>
+          </div>
+          <div class="time_line">
+            <span>2019.03-2021.02</span>
+            <h3>백석예술대학교 외식산업학부 졸업.</h3>
+            <p>처음엔 흥미를 느껴 시작하게 된 웹퍼블리셔,
+              6개월이 지난 지금 새로운 길을 가기위해 도전하다.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="i_am">
+        <ul class="flow_list">
+          <li>
+            <div class="splide ltl" id="splide1">
+              <div class="splide__track splide__track-1">
+                <ul class="splide__list">
+                  <li class="splide__slide">About</li>
+                  <li class="splide__slide">Me</li>
+                  <li class="splide__slide"><img src="src/img/7225765_arrow_route_right_icon.png" alt=""></li>
+                  <li class="splide__slide">About</li>
+                  <li class="splide__slide">Me</li>
+                  <li class="splide__slide"><img src="src/img/7225765_arrow_route_right_icon.png" alt=""></li>
+                  <li class="splide__slide">About</li>
+                  <li class="splide__slide">Me</li>
+                  <li class="splide__slide"><img src="src/img/7225765_arrow_route_right_icon.png" alt=""></li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="splide rtl" id="splide2">
+              <div class="splide__track splide__track-2">
+                <ul class="splide__list">
+                  <li class="splide__slide">
+                    <img src="src/img/bms.jpeg" alt="">
+                  </li>
+                  <li class="splide__slide">
+                    <img src="src/img/hanjan.jpeg" alt="">
+                  </li>
+                  <li class="splide__slide">
+                    <img src="src/img/jhd.jpeg" alt="">
+                  </li>
+                  <li class="splide__slide">
+                    <img src="src/img/lgs.jpeg" alt="">
+                  </li>
+                  <li class="splide__slide">
+                    <img src="src/img/sign.jpeg" alt="">
+                  </li>
+                  <li class="splide__slide">
+                    <img src="src/img/yjs.jpeg" alt="">
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="splide ltl" id="splide3">
+              <div class="splide__track splide__track-3">
+                <ul class="splide__list">
+                  <li class="splide__slide">Creative</li>
+                  <li class="splide__slide"><img src="public/symbol.png" alt=""></li>
+                  <li class="splide__slide">Collaborative</li>
+                  <li class="splide__slide"><img src="public/symbol2.png" alt=""></li>
+                  <li class="splide__slide">Chanllenging</li>
+                  <li class="splide__slide"><img src="public/symbol3.png" alt=""></li>
+                  <li class="splide__slide">Curious</li>
+                  <li class="splide__slide"><img src="public/symbol4.png" alt=""></li>
+                </ul>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <script type="module" src="src/js/main.js"></script>
